# linkerd2-proxy

./: Cargo.toml
linkerd/access-log/: Cargo.toml
linkerd/access-log/src/: tower.rs  tracing.rs
linkerd/app/: Cargo.toml
linkerd/app/core/: Cargo.toml
linkerd/app/core/src/: lib.rs  trace.rs
linkerd/app/inbound/src/: lib.rs
linkerd2-proxy/src/: main.rs
