[package]
name = "linkerd2-access-log"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
publish = false

[dependencies]
base64 = "0.10.1"
chrono = "0.4.15"
futures = "0.3"
http = "0.2"
tower = { version = "0.3", default-features = false }
tracing = "0.1.19"
tracing-subscriber = "0.2.12"
pin-project = "0.4"